--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script  src="js/popper.min.js" ></script>
+    <script src="js/jquery-3.4.1.min.js" ></script>
+    <script src="js/bootstrap.min.js" ></script>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="text/javascript" href="js/jquery-3.4.1.min.js" />
-    <link rel="text/javascript" href="js/popper.min.js" />
-    <link rel="text/javascript" href="js/bootstrap.min.js" />
+
     <title>React App</title>
   </head>
   <body style="width:100vw;height:100vh;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="container-fluid" style="height:100vh"  id="root">
+    <div class="container-fluid" style="height:100vh;overflow: hidden;padding:0"  id="root">
 
     </div>
     <!--
